--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ desktop.ini
 /.vs/glTF2-Viewer/v17
 /glTF2-Viewer.vcxproj.filters
 /glTF2-Viewer.vcxproj.user
+/.vs
+/assets/models
+/assets/environments
